--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ MarkupSafe==3.0.3
 packaging==25.0
 psycopg2-binary==2.9.11
 pydantic==2.12.3
+pydantic-settings==2.11.0
 pydantic_core==2.41.4
 python-dotenv==1.1.1
 sniffio==1.3.1
