--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ annotated-types==0.7.0
 anyio==4.11.0
 asyncpg==0.30.0
 click==8.3.0
+Faker==37.11.0
 fastapi==0.119.1
 GeoAlchemy2==0.18.0
 greenlet==3.2.4
@@ -10,15 +11,18 @@ h11==0.16.0
 idna==3.11
 Mako==1.3.10
 MarkupSafe==3.0.3
+numpy==2.3.4
 packaging==25.0
 psycopg2-binary==2.9.11
 pydantic==2.12.3
 pydantic-settings==2.11.0
 pydantic_core==2.41.4
 python-dotenv==1.1.1
+shapely==2.1.2
 sniffio==1.3.1
 SQLAlchemy==2.0.44
 starlette==0.48.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+tzdata==2025.2
 uvicorn==0.38.0
